--- a/media_agents/resources/en/templates/email_html.jinja
+++ b/media_agents/resources/en/templates/email_html.jinja
@@ -42,7 +42,7 @@
     <div class="article">
         <h2>{{ article.headline }}</h2>
         <p class="date">{{ article.source_date_created }}</p>
-        <p>{{ article.news_article }}</p>
+        <p>{{ article.news_article | replace("\n", "<br/>") }}</p>
         <p><strong>Key Points:</strong></p>
         <ul>
             {% for keypoint in article.keypoints %}
